--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body{
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 0px;
 }
 
 h1{
@@ -55,6 +56,8 @@ div{
     margin-left: 50px;
     border-bottom: 2px;
     border-left: 5px;
+    border-top: 0px;
+    border-right: 0px;
 }
 
 .blue{
@@ -63,6 +66,8 @@ div{
     margin-right: 50px;
     border-right: 5px;
     border-top: 2px; 
+    border-left: 0px;
+    border-bottom: 0px;
 
 }
 
@@ -80,19 +85,23 @@ div.blue>p{
     margin-left: 50px;
     border-bottom: 2px;
     border-left: 5px;
+    border-right: 0px;
+    border-top: 0px;
 
 }
 
 div.yellow>p{
-    color:#000000;
+    color:#707070 ;
 }
 
 .green{
-    background-color:#00EB00;
+    background-color:#008500;
     text-align: left;
     margin-right: 50px;
     border-right: 5px;
     border-top: 2px;
+    border-bottom: 0px;
+    border-left: 0px;
 
 }
 
@@ -113,6 +122,7 @@ footer p{
     font-size: 20px;
     text-align: right;
     padding-top: 15px;
+    padding-left:0px;
     padding-right: 15px;
     padding-bottom: 15px;
 
