--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,8 @@ body{
     font-family: Arial, Verdana;
     background-color: #000000;
     color: #ffffff;
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 0px;
+    margin: 20px 20px 0px 20px;
+    
 }
 
 h1{
@@ -21,8 +19,7 @@ h2{
 
 P{
     font-size: 24px;
-    padding-top: 10px;
-    padding-left: 10px;
+    padding: 10px 0px 0px 10px;
 }
 
 img{
@@ -54,20 +51,14 @@ div{
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
-    border-top: 0px;
-    border-right: 0px;
+    border: 0px 0px 2px 5px;
 }
 
 .blue{
     background-color: #0000FF;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px; 
-    border-left: 0px;
-    border-bottom: 0px;
+    border: 2px 5px 0px 0px;
 
 }
 
@@ -83,10 +74,7 @@ div.blue>p{
     background-color: #FFFF00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
-    border-right: 0px;
-    border-top: 0px;
+    border: 0px 0px 2px 5px;
 
 }
 
@@ -98,10 +86,7 @@ div.yellow>p{
     background-color:#008500;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px;
-    border-bottom: 0px;
-    border-left: 0px;
+    border: 2px 5px 0px 0px;
 
 }
 
@@ -121,9 +106,6 @@ footer{
 footer p{
     font-size: 20px;
     text-align: right;
-    padding-top: 15px;
-    padding-left:0px;
-    padding-right: 15px;
-    padding-bottom: 15px;
+    padding: 15px 15px 15px 0px;
 
 }
