--- a/css/style.css
+++ b/css/style.css
@@ -51,14 +51,14 @@ div{
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border: 0px 0px 2px 5px;
+    border-width: 0px 0px 2px 5px;
 }
 
 .blue{
     background-color: #0000FF;
     text-align: left;
     margin-right: 50px;
-    border: 2px 5px 0px 0px;
+    border-width: 2px 5px 0px 0px;
 
 }
 
@@ -74,7 +74,7 @@ div.blue>p{
     background-color: #FFFF00;
     text-align: right;
     margin-left: 50px;
-    border: 0px 0px 2px 5px;
+    border-width: 0px 0px 2px 5px;
 
 }
 
@@ -86,7 +86,7 @@ div.yellow>p{
     background-color:#008500;
     text-align: left;
     margin-right: 50px;
-    border: 2px 5px 0px 0px;
+    border-width: 2px 5px 0px 0px;
 
 }
 
